# fracnum

./: .gitignore  README.md  environment.env  pyproject.toml  setup.py
examples/VdP/: frac_vdp_oscillator_example.py  frac_vdp_oscillator_experimentation.py
experiments/performance/: performance_vdp.py  running_times.txt
fracnum/: __init__.py  data_utils.py  experimentation_handler.py  f_examples.py  numerical.py  ode_functions.py  plotting_utils.py  splines.py
fracnum/splines/: __init__.py  backend.py  bernstein_splines.py  spline_solvers.py  static_bernstein_methods.py  static_spline_methods.py
