[project]
name = "fracnum"
description = "Tools for fractional calculus and fractional differential equations. By Niels Goedegebure."
version = "0.9"

requires-python = ">=3.8"

dependencies = [
    "numpy~=2.0.2",
    "scipy~=1.13.1",
    "matplotlib~=3.9.2",
    "mpmath~=1.3.0",
    "tqdm~=4.66.5"
]

[tool.setuptools]
packages = ["fracnum"]